fix snippet and doc title overlap

--- a/app/styles/layout.less
+++ b/app/styles/layout.less
@@ -113,6 +113,7 @@ header {
 
 			.doc {
 				background-color: @fire;
+				min-height: 120px;
 
 				h3 {
 					margin-top: 75px;
@@ -127,10 +128,10 @@ header {
 
 			.snippet {
 				background-color: @light-earth;
-				min-height: 150px;
+				min-height: 140px;
 
 				h3 {
-					margin-top: 107px;
+					margin-top: 92px;
 				}
 			}
 
